<?xml version="1.0"?>
<package format="2">
  <name>drone_test</name>
  <version>0.0.0</version>
  <description>The drone_test package for drone trajectory following and obstacle avoidance.</description>

  <maintainer email="chahak@todo.todo">chahak</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/drone_test</url>

  <!-- Author tags are optional -->
  <author email="your.email@example.com">Your Name</author>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
